# abu-rayhan-alif_logiclock

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  docker-compose.yml  pyproject.toml  requirements-ci.txt  requirements-lock.txt
.github/workflows/: ci.yml  release-publish.yml
docs/: benchmark.md  ci-templates.md
examples/: README.md
examples/celery_fraud/: README.md
examples/celery_fraud/rules/: fraud_queue_gate.json
examples/django_shop/: README.md
examples/django_shop/rules/: checkout_discount.json
examples/drf_orders/: README.md
examples/drf_orders/rules/: order_risk_gate.json
examples/fastapi_limits/: README.md
examples/fastapi_limits/rules/: transfer_limit.json
examples/fintech_kyc/: README.md
examples/fintech_kyc/rules/: kyc_transfer_limit.json
examples/flask_checkout/: README.md
examples/flask_checkout/rules/: checkout_eligibility.json
examples/plain_python/: README.md
examples/plain_python/rules/: feature_gate.json
examples/plain_python/services/: feature_gate.py
packaging/github-marketplace-action/: action.yml
src/logiclock/: __init__.py  cli.py
src/logiclock/core/: __init__.py  ast_parser.py  ast_utils.py  auto_test.py  condition_matcher.py  config.py  edge_case_generator.py  graph_export.py  rule_conflicts.py  rule_schema.py  rule_usage.py  rule_validator.py  scanner.py
src/logiclock/decorators/: __init__.py  logic_lock.py
src/logiclock/reporting/: __init__.py  demo.py  report_model.py  terminal.py
src/logiclock/rules/: __init__.py
tests/: conftest.py  test_ast_parser.py  test_cli_autotest.py  test_cli_conflicts.py  test_cli_graph.py  test_cli_scan_validate.py  test_condition_matcher.py  test_edge_case_generator.py  test_graph_export.py  test_logic_lock.py  test_reporting.py  test_rule_conflicts.py  test_rule_schema.py  test_rule_validator.py  test_scanner.py  test_smoke.py
tests/fixtures/: sample_module.py
tests/fixtures/autotest/: demo_rule.json  demo_target.py
tests/snapshots/: condition_normalization_golden.txt  graph_fixture_module.dot  graph_fixture_module.mmd  report_sample_plain.txt
(+8 files in other folders)
