[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logiclock"
version = "0.1.0"
description = "Scan and validate code with configurable logic-lock rules."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
]

[project.scripts]
logiclock = "logiclock.cli:app"

[project.optional-dependencies]
dev = [
    "flake8>=7.0,<8",
    "pip-tools>=7.4,<8",
    "pytest>=8.0,<9",
    "rich>=13.7,<14",
]

[tool.setuptools.packages.find]
where = ["src"]
