[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# pip install pylogiclock — PyPI rejects ``logic-lock`` as too similar to an existing name;
# Python import path remains ``logiclock``.
name = "pylogiclock"
description = "Scan and validate code with configurable logic-lock rules."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dynamic = ["version"]
authors = [{ name = "Abu Rayhan Alif" }]
keywords = ["cli", "validation", "rules", "business-logic", "metadata"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.7,<3",
    "typer>=0.12,<1",
]

[project.urls]
Homepage = "https://github.com/abu-rayhan-alif/logiclock"
Repository = "https://github.com/abu-rayhan-alif/logiclock"
Issues = "https://github.com/abu-rayhan-alif/logiclock/issues"

[project.scripts]
logiclock = "logiclock.cli:app"

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "flake8>=7.0,<8",
    "pip-tools>=7.4,<8",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "rich>=13.7,<14",
    "twine>=5.1,<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "logiclock.__version__" }
